--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@
 .nav-items > ul > li{
     margin: 10px;
     padding: 10px;
-    color:black;
+    color:black !important;
     text-underline-offset:-150px;
 }
 
@@ -32,10 +32,11 @@
     padding: 10px;
     border-radius: 20px;
     background-color: white;
-    text-align: center;
     box-shadow: 2px 4px 8px 0 rgba(0, 0, 0, 0.2);
+    text-align: center;
     color: black;
 }
+
 .res-card:hover{
     cursor: pointer;
     border: 1px solid rgb(254, 123, 0);
